--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,9 +4,27 @@
     <title>Sinatra RPS</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <style>
+       body{
+        font-faimly: Arial;
+       }
+    </style>
   </head>
 
   <body>
+
+   <%= yield %>
+   
+    <div>
+      <a href="/rock">Play rock<\a>
+    </div>
+    <div>
+      <a href="/paper">Play paper<\a>
+    </div>
+    <div>
+      <a href="/scissors">Play scissors<\a>
+    </div>
 
     <%= yield %>
 
