fixing home page

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,11 +1,11 @@
 <div>
-  <a href="/rock">Play rock<\a>
+  <a href="/rock">Play rock</a>
 </div>
 
 <div>
-  <a href="/paper">Play paper<\a>
+  <a href="/paper">Play paper</a>
 </div>
     
 <div>
-  <a href="/scissors">Play scissors<\a>
+  <a href="/scissors">Play scissors</a>
 </div>
