--- a/views/move.erb
+++ b/views/move.erb
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html>
+
+<div>
+  <a href="/rock">Play rock</a>
+</div>
+
+<div>
+  <a href="/paper">Play paper</a>
+</div>
+    
+<div>
+  <a href="/scissors">Play scissors</a>
+</div>
 
 <h2>
   We played <%= player_move %>!
@@ -10,3 +24,4 @@
 <h2>
   We <%= @outcome %>!
 </h2>
+</html>
