the erb pages aren't working

--- a/views/paper.erb
+++ b/views/paper.erb
@@ -1,4 +1,4 @@
-move = ["rock", "paper", "scissors"]
+<%= move = ["rock", "paper", "scissors"]
 
 @player_move = "paper"
 @comp_move = move.sample
@@ -11,5 +11,5 @@ else
   @outcome = "won"
 end
 
-
 erb(:move)
+%>
