--- a/views/scissors.erb
+++ b/views/scissors.erb
@@ -1,4 +1,4 @@
-move = ["rock", "paper", "scissors"]
+<%=move = ["rock", "paper", "scissors"]
 
 @player_move = "scissors"
 @comp_move = move.sample
@@ -13,3 +13,4 @@ end
 
 
 erb(:move)
+%>
