--- a/views/move.erb
+++ b/views/move.erb
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 
 <div>
   <a href="/rock">Play rock</a>
@@ -13,6 +11,7 @@
   <a href="/scissors">Play scissors</a>
 </div>
 
+<div>
 <h2>
   We played <%= @player_move %>!
 </h2>
@@ -24,4 +23,4 @@
 <h2>
   We <%= @outcome %>!
 </h2>
-</html>
+</div>>
