--- a/views/home.erb
+++ b/views/home.erb
@@ -1,3 +1,8 @@
+<h1>Welcome to Rock Paper Scissors!</h1>
+
+<h2>What move do you want to play?</h2>
+
+
 <div>
   <a href="/rock">Play rock</a>
 </div>
