--- a/views/paper.erb
+++ b/views/paper.erb
@@ -1,4 +1,5 @@
-<%= move = ["rock", "paper", "scissors"]
+<%= 
+move = ["rock", "paper", "scissors"]
 
 @player_move = "paper"
 @comp_move = move.sample
@@ -13,3 +14,17 @@ end
 
 erb(:move)
 %>
+
+<div>
+<h2>
+  We played <%= @player_move %>!
+</h2>
+
+<h2>
+  They played + <%= @comp_move %>!
+</h2>
+
+<h2>
+  We <%= @outcome %>!
+</h2>
+</div>>
