finally it works

--- a/views/paper.erb
+++ b/views/paper.erb
@@ -1,4 +1,17 @@
-<%=
+
+<div>
+  <a href="/rock">Play rock</a>
+</div>
+
+<div>
+  <a href="/paper">Play paper</a>
+</div>
+    
+<div>
+  <a href="/scissors">Play scissors</a>
+</div>
+
+<%
 move = ["rock", "paper", "scissors"]
 
 @player_move = "paper"
@@ -24,3 +37,5 @@ end
 <h2>
   We <%= outcome %>!
 </h2>
+
+<a href="/">Home</a>
