--- a/views/scissors.erb
+++ b/views/scissors.erb
@@ -1,4 +1,17 @@
-<%= move = ["rock", "paper", "scissors"]
+<div>
+  <a href="/rock">Play rock</a>
+</div>
+
+<div>
+  <a href="/paper">Play paper</a>
+</div>
+    
+<div>
+  <a href="/scissors">Play scissors</a>
+</div>
+
+
+<% move = ["rock", "paper", "scissors"]
 
 player_move = "scissors"
 @comp_move = move.sample
@@ -24,3 +37,5 @@ end %>
 <h2>
   We <%= outcome %>!
 </h2>
+
+<a href="/">Home</a>
